--- a/_layouts/project-old.html
+++ b/_layouts/project-old.html
@@ -13,13 +13,13 @@ layout: compress
     {% include navbar.html %}
 
     <!--Main Section-->
-    <section class="hero is-fullheight" id="project">
+    <section class="hero is-fullheight" id="project-old">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="section">
-                    <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Projects</p>
+                    <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Projects Old</p>
                 </div>
-                {% include project-card.html %}
+                {% include project-old-card.html %}
             </div>
         </div>
     </section>
