--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -106,7 +106,7 @@ a.navbar-item.is-active {
     }
 }
 
-#blog {
+#projects {
     .hero-body {
         padding: 3rem 0.25rem 1rem 0.25rem;
     }
@@ -115,7 +115,7 @@ a.navbar-item.is-active {
         margin: 1.5rem auto;
     }
 
-    #blog-card {
+    #project-card {
         transition: all 0.25s ease;
         margin-bottom: 0.5vmax;
         transform: scale(0.85);
@@ -257,7 +257,7 @@ a.navbar-item.is-active {
     }
 }
 
-#project {
+#project-old {
     .columns {
         .column {
             border-radius: 0.5rem;
@@ -269,7 +269,7 @@ a.navbar-item.is-active {
         }
     }
 
-    #project-card {
+    #project-old-card {
         -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
         -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
         box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
