--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@
     </div>
     <div id="results-container"></div>
     <!--Project Cards Section-->
-    {% for post in site.projects %}
+    {% for project in site.projects %}
         {% include project-card.html %}
     {% endfor %}
     </div>
