--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,15 +1,25 @@
-<div class="columns has-text-centered" id="project-card">
-    <div class="column is-marginless is-paddingless is-one-third-desktop is-one-third-fullhd is-one-third-tablet">
-        <div class="image is-16by9" style="background-image: url({{project.project-image}});"></div>
+<a href="{{ project.url | absolute_url }}" class="columns is-vcentered" id="project-card">
+  <div class="column is-one-third-desktop is-one-third-fullhd is-one-third-tablet">
+    <figure class="image is-16by9">
+      <img src="{{ project.project-image }}" alt="{{ project.title }}">
+    </figure>
+  </div>
+  <div class="column has-text-left">
+    <h1 class="title is-size-4-touch">{{ project.title }}</h1>
+    <div class="content has-text-grey">
+      {{ project.content | truncate: 300 | strip_html | strip_newlines | strip | escape }}
+      <hr class="has-background-grey">
+      <span class="has-text-grey">
+        Published on
+        <span class="has-text-weight-semibold">{{ project.date | date: "%-B %d, %Y" }}</span>
+      </span>
+      | <i class="fas fa-clock"></i>
+      <span class="has-text-weight-semibold">
+        {% assign words = project.content | number_of_words %}
+        {% unless content.size == 0 %}
+          {{ words | divided_by:180 }} min
+        {% endunless %}
+      </span> read
     </div>
-    <a href="{{project.url | absolute_url}}">
-        <div class="column has-text-left-desktop has-text-left-tablet">
-            <h1 class="title is-size-4-touch">{{project.title}}</h1>
-            <div class="content has-text-grey">
-                {{ project.content | truncate: 300 | strip_html | strip_newlines | strip | escape }}
-                <hr class="has-background-grey">
-                <span class="has-text-grey">Published on <span class="has-text-weight-semibold">{{ project.date | date: "%-B %d, %Y" }}</span></span> | <i class="fas fa-clock"></i> <span class="has-text-weight-semibold">{% assign words = project.content | number_of_words %}{%- unless content.size == 0 -%}{{ words | divided_by:180 }} min{% endunless %}</span> read
-            </div>
-        </div>
-    </a>
-</div>
+  </div>
+</a>
