--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,14 +12,8 @@
                     <br>
                     <div class="container columns is-centered">
                         <div>
-                            <a href="{{site.url}}{{site.baseurl}}/#projects"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Projects</a>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="{{site.url}}{{site.baseurl}}/#contact"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Contact
-                                Me</a>
+                            <a href="{{ '/resume' | absolute_url }}"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Resume</a>
                             </a>
                         </div>
                     </div>
