--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -8,7 +8,7 @@
         {{site.description}}
       </h2>
       <hr>
-      <a href="{{site.url}}{{site.baseurl}}/#projects"
+      <a href="{{site.url}}{{site.baseurl}}/#about"
         class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
       </a>
     </div>
