Added rounded border to project card images

--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,7 +1,7 @@
 <a href="{{ project.url | absolute_url }}" class="columns is-vcentered" id="project-card">
   <div class="column is-one-third-desktop is-one-third-fullhd is-one-third-tablet">
     <figure class="image is-16by9">
-      <img src="{{ project.project-image }}" alt="{{ project.title }}">
+      <img src="{{ project.project-image }}" alt="{{ project.title }}" style="border-radius: 0.25rem;">
     </figure>
   </div>
   <div class="column has-text-left">
