Added temporary resume

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <br>
                     <div class="container columns is-centered">
                         <div>
-                            <a href="{{ '/resume' | absolute_url }}"
+                            <a href="/AmzyAmaliaZarcuResume.pdf" target="_blank" 
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Resume</a>
                             </a>
                         </div>
