--- a/_includes/dropdown.html
+++ b/_includes/dropdown.html
@@ -3,8 +3,8 @@
         MORE
     </a>
     <div class="navbar-dropdown has-background-black is-left">
-        <a href="{{ '/resume' | absolute_url }}"
-            class="navbar-item has-text-grey-light {% if page.url == '/resume' %}is-active{% endif %}">
+        <a href="/AmzyAmaliaZarcuResume.pdf" target="_blank" 
+            class="navbar-item has-text-grey-light {% if page.url == '/AmzyAmaliaZarcuResume.pdf' %}is-active{% endif %}">
             Resume
         </a>
         <a href="{{ '/more-about-me' | absolute_url }}"
