Updated about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,8 +7,14 @@
                         <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
                     </figure>
                 </div>
-                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
-                    <p>{{site.author-about}}</p>
+                <div class="column">
+                    <p>
+                        I am <b>Amzy</b>, a passionate game programmer with a particular interest to <b>gameplay</b> 
+                        and the <b>tools and systems</b> that support it, currently studying at<a href="https://www.buas.nl/en/programmes/creative-media-and-game-technologies" class="has-text-grey-dark has-text-weight-bold">Breda University Of Applied Sciences.</a>I 
+                        have experience and enjoy working in <b>Unreal</b>,
+                        <br>
+                         as well as <b>custom engines</b>, utilizing <b>C++</b> to create <b>extensible gameplay architectures</b> that support both <b>technical and creative</b> needs of game development. 
+                    </p>
                     <br>
                     <div class="container columns is-centered">
                         <div>
