--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,7 +15,7 @@
             <div class="column is-full is-size-1">
                 {% unless site.linkedin_username ==  %}
                 <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank" class="has-text-black">
-                    <i class="fab svg fa-linkedin"></i>
+                    <i class="fab fa-linkedin"></i>
                 </a>
                 {% endunless %}
                 {% unless site.github_username ==  %}
