Added icons but not finished because i want to test on mobile

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,6 +16,24 @@
                          as well as <b>custom engines</b>, utilizing <b>C++</b> to create <b>extensible gameplay architectures</b> that support both <b>technical and creative</b> needs of game development. 
                     </p>
                     <br>
+                    <div class="columns is-mobile is-multiline" style="overflow: auto">
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/vs.png" alt="VS">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                        </figure>
+                    </div>
+                    <br>
                     <div class="container columns is-centered">
                         <div>
                             <a href="/AmzyAmaliaZarcuResume.pdf" target="_blank" 
