--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -82,6 +82,11 @@ a.navbar-item.is-active {
         min-width: 25vmax;
         margin: 0.5rem;
     }
+
+    .icon {
+        width: 50px;
+        height: 50px;
+    }
 }
 
 #contact {
