Added icons to about section and some minor changes

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,25 +16,45 @@
                          as well as <b>custom engines</b>, utilizing <b>C++</b> to create <b>extensible gameplay architectures</b> that support both <b>technical and creative</b> needs of game development. 
                     </p>
                     <br>
-                    <div class="columns is-mobile is-multiline" style="overflow: auto">
-                        <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/vs.png" alt="VS">
-                        </figure>
-                        <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
-                        </figure>
+                    <h1>
+                        <b>Skills & Tools</b>
+                    </h1>
+                    <br>
+                    <div class="columns is-centered is-mobile is-multiline" style="overflow: auto">
                         <figure class="column is-narrow">
                             <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                            <img class="icon" src="../assets/images/vs.png" alt="vs">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                            <img class="icon" src="../assets/images/vscode.png" alt="vscode">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/unreal.svg" alt="unreal">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/perforce.png" alt="perforce">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/github.svg" alt="github">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/jira.svg" alt="jira">
+                        </figure>
+                        <figure class="column is-narrow">
+                            <img class="icon" src="../assets/images/confluence.png" alt="confluence">
                         </figure>
                     </div>
                     <br>
                     <div class="container columns is-centered">
+                    <!--
+                        <div>
+                            <a href="/more-about-me"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Read More About Me</a>
+                            </a>
+                        </div>
+                    -->
                         <div>
                             <a href="/AmzyAmaliaZarcuResume.pdf" target="_blank" 
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Resume</a>
