Replaced linkedin link with email in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,9 +25,12 @@
                 </a>
             </div>
             <div class="column has-text-left-desktop has-text-centered-mobile">
+            <!--
                 <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank" class="has-text-grey" style="font-size: 50px;">
                     <i class="fab fa-linkedin"></i>
                 </a>
+            -->
+                <a href="mailto:{{site.email}}" class="has-text-grey">{{site.email}}</a>
             </div>
         </div>
     </div>
