--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -174,6 +174,12 @@ a.navbar-item.is-active {
                 background-size: cover;
             }
         }
+
+        .icon {
+            color: rgb(54, 54, 54);
+            font-size: 22px;
+            margin: 0.4rem
+        }
     }
 }
 
