--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -8,22 +8,33 @@
     <h1 class="title is-size-4-touch">{{ project.title }}</h1>
     <div class="content has-text-grey">
       {{ project.description }}
-      <hr class="has-background-grey-darker" style="margin: 6px">
+      <hr class="has-background-grey-darker" style="height: 1.5px; margin: 6px">
   </div>
 
-  <div class="columns is-vcentered">
-    <!-- Column 1 -->
-    <div class="column content has-text-grey is-narrow" style="margin: 4px">
-      <span><i class="icon fa-solid fa-hammer"></i> {{ project.engine-tool }}</span>
-      <span><i class="icon fa-solid has-text-grey-darker fa-calendar-days"></i> {{ project.year }}</span>
-    </div>
+  <div class="columns">
+    
+      <!-- Column 1 -->
+      <div class="column content has-text-grey is-one-third" style="margin: 4px">
+        <h4 style="margin: 1px; text-align: center;">Stats</h4>
+        <span><i class="icon fa-solid fa-hammer"></i> {{ project.engine-tool }}</span>
+        <span><i class="icon fa-solid has-text-grey-darker fa-calendar-days"></i> {{ project.year }}</span>
+        <span><i class="icon fa-solid has-text-grey-darker fa-users"></i> {{ project.team-size }}</span>
+        <span><i class="icon fa-regular has-text-grey-darker fa-clock"></i> {{ project.duration }}</span>
+      </div>
 
     <!-- Column 2 -->
-    <div class="column content has-text-grey is-narrow" style="margin: 4px">
-      <span><i class="icon fa-solid has-text-grey-darker fa-users"></i> {{ project.team-size }}</span>
-      <span><i class="icon fa-regular has-text-grey-darker fa-clock"></i> {{ project.duration }}</span>
+    <div class="column content is-narrow">
+      <div class="vertical-line"></div>
+  </div>
+
+    <!-- Column 3 -->
+    <div class="column content">
+        <h4 style="margin: 1px; text-align: center;">Key Responsibilities</h4>
+        <div class="content has-text-grey has-text-left">
+          {{ project.key-responsibilities }}
+        </div>
     </div>
 
-</div>
+  </div>
 </div>
 </a>
