Changing project card #5

--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -13,7 +13,7 @@
 
   <div class="columns">
     
-      <!-- Column 1 -->
+      <!-- Stats -->
       <div class="column content has-text-grey is-one-third" style="margin: 4px">
         <h4 style="margin: 1px; text-align: center;">Stats</h4>
         <span><i class="icon fa-solid fa-hammer"></i> {{ project.engine-tool }}</span>
@@ -22,15 +22,15 @@
         <span><i class="icon fa-regular has-text-grey-darker fa-clock"></i> {{ project.duration }}</span>
       </div>
 
-    <!-- Column 2 -->
+    <!-- Vertical Line -->
     <div class="column content is-narrow">
       <div class="vertical-line"></div>
   </div>
 
-    <!-- Column 3 -->
-    <div class="column content">
+    <!-- Key Responsibilities -->
+    <div class="column content is-centered">
         <h4 style="margin: 1px; text-align: center;">Key Responsibilities</h4>
-        <div class="content has-text-grey has-text-left">
+        <div class="content has-text-grey">
           {{ project.key-responsibilities }}
         </div>
     </div>
