Project card finished (for now)

--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -29,12 +29,21 @@
 
     <!-- Key Responsibilities -->
     <div class="column content is-centered">
-        <h4 style="margin: 1px; text-align: center;">Key Responsibilities</h4>
-        <div class="content has-text-grey">
-          {{ project.key-responsibilities }}
-        </div>
-    </div>
+      <h4 style="margin: 1px; text-align: center;">Key Responsibilities</h4>
 
+      <div class="columns">
+
+        <!-- Column 1 -->
+        <div class="column content has-text-grey">
+          {{ project.key-responsibilities-1 }}
+        </div>
+
+        <!-- Column 2 -->
+        <div class="column content has-text-grey">
+          {{ project.key-responsibilities-2 }}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </a>
