--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,6 +121,7 @@ a.navbar-item.is-active {
     }
 
     #project-card {
+        background-color: rgb(249, 250, 251);
         transition: all 0.25s ease;
         margin-bottom: 0.5vmax;
         transform: scale(0.85);
@@ -128,15 +129,15 @@ a.navbar-item.is-active {
         margin-left: 2.5vmax;
         line-height: normal;
         border-radius: 0.25rem;
-        -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
-        -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
-        box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
 
         &:hover {
             transform: scale(0.875);
-            -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
-            -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
-            box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
+            -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
+            -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
+            box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
         }
 
         @media (max-width: 768px) {
