--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -226,6 +226,7 @@ a.navbar-item.is-active {
         width: 10rem;
         padding: 0.25rem;
         margin: auto auto 1rem auto;
+        border-radius: 1rem;
 
         &:hover {
             transform: scale(1.05);
