--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,7 +107,8 @@ a.navbar-item.is-active {
 
     i.fab, i.fas {
         transition: all 0.15s ease-in-out;
-        margin: auto 0.75vmax;
+        margin: auto 0.1vmax;
+        color: black;
     }
     
     i.fab:hover, i.fas:hover {
