Changed contact section
And removed project-old from the style sheet

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,13 +5,13 @@
                 <i class="fas fa-envelope" style="margin-left: 0px; transform: translate(0px, 1.15px);"></i>
                 Send me an email
             </div>
-            <div>
-                <a href="mailto:{{site.email}}" target="_blank" class="has-text-grey">
+            <div id="email-container">
+                <a href="mailto:{{site.email}}" target="_blank" class="has-text-black">
                     {{site.email}}
                 </a>
             </div>
             
-            <hr>
+            <hr style="height: 2px;">
 
             <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
                 You can find me here
