--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -119,6 +119,15 @@ a.navbar-item.is-active {
     hr {
         background-color: black;
     }
+
+    #email-container {
+        text-align: center;
+        padding: 6px;
+        border-radius: 1rem;
+        max-width: 600px;
+        margin: 0.5rem auto;        
+        outline: 1px solid black;
+    }
 }
 
 #projects {
@@ -286,38 +295,6 @@ a.navbar-item.is-active {
             text-decoration: underline;
             font-weight: bolder;
             color: white;
-        }
-    }
-}
-
-#project-old {
-    .columns {
-        .column {
-            border-radius: 0.5rem;
-            .image {
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-        }
-    }
-
-    #project-old-card {
-        -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
-        -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
-        box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
-        transform: scale(0.95);
-        transition: all 0.5s ease;
-        margin-bottom: 0.5rem !important;
-        display: inline-table;
-        &:hover {
-            transform: scale(0.975);
-        }
-    }
-    .card {
-        transition: all 0.25s ease;
-        &:hover {
-            background-color: rgba($color: #000000, $alpha: 0.90)!important;
         }
     }
 }
