--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                         <div class="column is-marginless">
                             <h5 class="has-text-grey-lighter">{{site.author-name}}</h5>
                             <div class="content has-text-grey">
-                                <p>Game Programmer</p>
+                                {{ site.description }}
                             </div>
                         </div>
                     </div>
