Removed search bar from projects

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -130,6 +130,15 @@ a.navbar-item.is-active {
     }
 }
 
+#projects-heading {
+    .custom-line {
+        height: 2px;
+        width: 150px;
+        background-color: gray;
+        margin: 20px auto;
+      }
+}
+
 #projects {
     .hero-body {
         padding: 3rem 0.25rem 1rem 0.25rem;
