--- a/_includes/projects-heading.html
+++ b/_includes/projects-heading.html
@@ -1,5 +1,5 @@
 <!-- Main container -->
-<nav class="level has-text-centered">
+<div class="level has-text-centered" id="projects-heading">
     <!-- Left side -->
     <div class="level-left">
         <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Projects</p>
@@ -7,7 +7,7 @@
     <!-- Right side -->
     <div class="level-right">
         <div class="level-item">
-            {% include search.html %}
+          <div class="custom-line"></div>
         </div>
     </div>
-</nav>
+</div>
