--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
             
             <hr style="height: 2px;">
 
-            <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
+            <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black" style="margin-bottom: 5px;">
                 You can find me here
             </h3>
             <div class="columns is-full is-size-1" style="justify-content: center;">
