--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,26 +15,26 @@ layout: compress
   <section class="hero is-fullheight has-text-centered" id="project">
     <div class="hero-body">
       <div class="container">
+      <!-- Title -->
         <a href="{{page.url | relative_url}}" class="has-text-black" id="title">
           <h1 class="title has-text-centered is-2 has-text-weight-semibold ">{{page.title}}</h1>
           <hr class="has-background-black">
         </a>
 
-        {% if page.content.size == 0 %}
-          <div class="columns is-variable is-5">
-            <div class="column is-6">
-              <figure class="image is-16by9 has-shadow">
-                <img src="{{page.project-image}}" alt="{{project.title}}" id="project-image">
-              </figure>
-            </div>
-            <div class="subtitle column is-5 has-text-left-desktop has-text-left-fullhd has-text-left-tablet has-text-center-mobile">
-              {% unless page.description.size == 0 %}
-              <p id="description" class="content is-small has-text-weight-medium is-uppercase">{{page.description | strip | strip_html | strip_newlines }}</p>
-              {% endunless %}
-            </div>
+        <!-- Info & GIF -->
+        <div class="columns">
+          <!-- Info -->
+          <div class="column">
+            Hello
           </div>
-        {% endif %}
+        
+          <!-- GIF -->
+          <div class="column is-three-fifths">
+            <img src="{{page.project-gif}}" alt="Project GIF">
+          </div>
+        </div>
 
+        <!-- Content -->
         <div class="content has-text-justified-desktop has-text-justified-fullhd has-text-justified has-text-justified-tablet has-text-left-mobile">
           <p>{{ content }}</p>
         </div>
