Added team-breakdown to project

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -38,7 +38,7 @@ layout: compress
                 <div><i class="icon fa-regular has-text-grey-darker fa-circle-question"></i> {{ page.project-type }}</div>
                 <div><i class="icon fa-solid has-text-grey-darker fa-hammer"></i> {{ page.engine-tool }}</div>
                 <div><i class="icon fa-solid has-text-grey-darker fa-calendar-days"></i> {{ page.year }}</div>
-                <div><i class="icon fa-solid has-text-grey-darker fa-users"></i> {{ page.team-size }}</div>
+                <div><i class="icon fa-solid has-text-grey-darker fa-users"></i> {{ page.team-breakdown }}</div>
                 <div><i class="icon fa-regular has-text-grey-darker fa-clock"></i> {{ page.duration }}</div>
               </div>
 
