--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -424,6 +424,12 @@ a.navbar-item.is-active {
     .content ul li::marker {
         color: rgb(54, 54, 54);
     }
+    
+    .icon {
+        color: rgb(54, 54, 54);
+        font-size: 22px;
+        margin: 0.25rem
+    }
 }
 
 #page-section {
