--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -20,7 +20,7 @@
       <!-- Stats -->
       <div class="column content has-text-grey is-one-third" style="margin: 4px">
         <h4 style="margin: 1px; text-align: center;">Stats</h4>
-        <span><i class="icon fa-regular fa-circle-question"></i> {{ project.project-type }}</span>
+        <span><i class="icon fa-solid fa-circle-info"></i> {{ project.project-type }}</span>
         <span><i class="icon fa-solid fa-hammer"></i> {{ project.engine-tool }}</span>
         <span><i class="icon fa-solid has-text-grey-darker fa-calendar-days"></i> {{ project.year }}</span>
         <span><i class="icon fa-solid has-text-grey-darker fa-users"></i> {{ project.team-size }}</span>
