--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -35,7 +35,7 @@ layout: compress
               <!-- Stats -->
               <div class="content is-one-third has-text-left" style="margin: 4px">
                 <h4 style="margin: 1px; text-align: center;">Stats</h4>
-                <div><i class="icon fa-regular has-text-grey-darker fa-circle-question"></i> {{ page.project-type }}</div>
+                <div><i class="icon fa-solid has-text-grey-darker fa-circle-info"></i> {{ page.project-type }}</div>
                 <div><i class="icon fa-solid has-text-grey-darker fa-hammer"></i> {{ page.engine-tool }}</div>
                 <div><i class="icon fa-solid has-text-grey-darker fa-calendar-days"></i> {{ page.year }}</div>
                 <div><i class="icon fa-solid has-text-grey-darker fa-users"></i> {{ page.team-breakdown }}</div>
