--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -57,8 +57,9 @@ layout: compress
           </div>
         
           <!-- GIF -->
-          <div class="column is-three-fifths">
-            <img src="{{page.project-gif}}" alt="Project GIF">
+          <div class="column is-three-fifths" style="transform: scale(1.1) translateX(-10px);">
+            <a href="{{page.project-gif}}" target="_blank">
+            <img src="{{page.project-gif}}" alt="Project GIF"></a>
           </div>
         </div>
         <hr class="has-background-grey-darker" style="height: 1.5px;">
