Made all image paths absolute

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,28 +22,28 @@
                     <br>
                     <div class="columns is-centered is-mobile is-multiline" style="overflow: auto">
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/cpp.svg" alt="cpp">
+                            <img class="icon" src="/assets/images/cpp.svg" alt="cpp">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/vs.png" alt="vs">
+                            <img class="icon" src="/assets/images/vs.png" alt="vs">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/vscode.png" alt="vscode">
+                            <img class="icon" src="/assets/images/vscode.png" alt="vscode">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/unreal.svg" alt="unreal">
+                            <img class="icon" src="/assets/images/unreal.svg" alt="unreal">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/perforce.png" alt="perforce">
+                            <img class="icon" src="/assets/images/perforce.png" alt="perforce">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/github.svg" alt="github">
+                            <img class="icon" src="/assets/images/github.svg" alt="github">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/jira.svg" alt="jira">
+                            <img class="icon" src="/assets/images/jira.svg" alt="jira">
                         </figure>
                         <figure class="column is-narrow">
-                            <img class="icon" src="../assets/images/confluence.png" alt="confluence">
+                            <img class="icon" src="/assets/images/confluence.png" alt="confluence">
                         </figure>
                     </div>
                     <br>
