--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -33,7 +33,7 @@
       </div>
 
       <!-- Key Responsibilities -->
-      <div class="column content is-centered" style="transform: translateY(-5px)">
+      <div class="column content is-centered" style="transform: translateY(-5px); margin-bottom: 0px;">
         <h4 style="text-align: center;">Key Responsibilities</h4>
 
         <div class="columns">
