--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -50,6 +50,9 @@ layout: compress
                 <div class="content has-text-left ">
                   <ul>
                   {{ page.key-responsibilities-1 }}
+                  {% if page.responsibility-subtitles %}
+                    <br>
+                  {% endif %}
                   {{ page.key-responsibilities-2 }}
                   </ul>
                 </div>
