Added ability system blog

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -334,6 +334,7 @@ a.navbar-item.is-active {
 
     .tag {
         margin: 0.15rem auto;
+        background-color: black;
     }
     .content {
         ol, ul, blockquote {
