Changed project page width to be in terms of vmax
Viewport max size

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -415,7 +415,7 @@ a.navbar-item.is-active {
     .container {
         margin: 2.5rem auto;
         word-break: break-word;
-        max-width: 1000px;
+        max-width: 70vmax;
     }
 
     #disqus_thread {
