Included meta tag for google search

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,4 +1,5 @@
 <!-- Include Meta Tags Here -->
+<meta name="google-site-verification" content="bVuRBqqzg9RAzJXynXZjDrfC4ZZzE-4h1yAT6GeaiRs" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
